static/react-source/src/Views/Main.scss
@import "../../node_modules/bootstrap/scss/_functions.scss";
@import "../../node_modules/bootstrap/scss/_variables.scss";
@import "../../node_modules/bootstrap/scss/_mixins.scss";
$mapPng: "../Images/town_map.png";

// layout
// -----------------------------------

$breakpoint-sm: "576px";

// basic colors
// -----------------------------
$red:                   #B10808;
$warning:               #a40000;
$wine:                  #701;
$cranberry:             #852625;
$cinnamon:              #845852;
$cream:                 #F8F0E5;
$tapioca:               #F2E5D4;
$white:                 #fff;
$green:                 #5BA917;
$neutralLight:          #f2eed5;
$putty:                 #d8d3b3;
$greenLight:                 #96BC44;
$greenDark:             #809240;
// $red:                   #9d261d;
$blueDark:              #1c7f99; // #006699;
$blue:                  #049cdb;
$yellow:                #ffc40d;
$orange:                #f89406;
$niceGrey:              #6c757d;

// Applied Pallette (modded)
// -------------------------
$palletteBG: $white;
$pallette1: $neutralLight;
$pallette2: $putty;
$pallette3: $green;
$pallette4: $greenDark;
$accent1: $red;
$accent2: $blueDark;
$accent3: $orange;

$textColor: #333;
$linkColor: $pallette2;
$navbarLinkColor: $pallette2;
$heading-color: #ab8531;  // darken($pallette1, 40%);

// semantic colors (modded)
// -------------------------
$danger-bg: #fcf2f2;
$danger: #dc3545;  // #bd362f; // #a84f4c; // default #dFb5b4;
$info-bg: #f0f7fd; //#d0e3f0;
$info: #5bc0de;
$info-dark: #2f96b4; // #5387B2;
$warning-bg: #fefbed;
$warning: $orange; // #f1e7bc;
$error: $danger;
$success-bg: #dff0d8;
$success: $pallette3;  // #d6e9c6;
$successDark: $pallette4; // #d6e9c6;

// semantic colors (grammatical)
$verb: #BF9000;
$nominative: #235888;
$genitive: #70AD47;
$accusative: #C00000;
$vocative: #C55A11;
$dative: #7030A0;
$preposition: #009999;

$table-background: lighten($nominative, 60%);


//---------------------------------------------------
// typography

@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans|Gentium');

// @font-face {
//     font-family: 'Glyphicons Halflings';
//     src: url('../Fonts/glyphicons-halflings-regular.eot');
//     src: url('../Fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../Fonts/glyphicons-halflings-regular.woff') format('woff'), url('../Fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../Fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
//     font-weight: normal;
//     font-style: normal;
// }

@font-face {
    font-family: 'SBLGreekRegular';
    src: url('../Fonts/sbl_grk-webfont.eot');
    src: local('☺'),
    url('../Fonts/sbl_grk-webfont.woff') format('woff'),
    url('../Fonts/sbl_grk-webfont.ttf') format('truetype'),
    url('../Fonts/sbl_grk-webfont.svg#webfontRelj09Wi') format('svg');
    font-weight: normal;
    font-style: normal;
}

$font-size-base:               1rem;
$font-size-lg:                 $font-size-base * 1.25;
$font-size-sm:                 $font-size-base * .8;
$sans-fonts:                   "Open Sans", sans-serif;
$greek-fonts:                  "Lucida Grande", Gentium, "SBLGreekRegular", Palatino, "Arial Unicode";
$title-fonts:                  "Amatic SC";

.svg-inline--fa               {margin-right: 0.25rem;
                               margin-left: 0.25rem;
}

$hard-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
$soft-shadow: 2px 4px 0 rgba(0,0,0,0.5);

// mixins --------------------------------------------------

@mixin react-transition-fade($class, $duration: 200) {
    &.#{$class}-appear,
    &.#{$class}-enter          {opacity: 0;
    }
    &.#{$class}-appear-active,
    &.#{$class}-enter-active   {opacity: 1;
                                transition: opacity #{$duration}ms;
    }
    &.#{$class}-appear-done,
    &.#{$class}-enter-done     {opacity: 1;
                                transition: opacity #{$duration}ms;
    }
    &.#{$class}-exit            {opacity: 1;
    }
    &.#{$class}-exit-active     {opacity: 0;
                                 transition: opacity #{$duration}ms;
    }
    &.#{$class}-exit-done       {opacity: 0;
                                transition: opacity #{$duration}ms;
    }
}

@mixin center-content-both() {display: flex;
                              align-items: center;
                              justify-content: center;
}

@mixin triangle-bottom($color, $width: 8) {
    &:after                       {content: '';
                                   position: absolute;
                                   top: 100%;
                                   left: 50%;
                                   margin-left: #{$width*-1}px;
                                   width: 0; height: 0;
                                   border-top: $width*1px solid $color;
                                   border-right: $width*1px solid transparent;
                                   border-left: $width*1px solid transparent;
    }
}
@mixin triangle-bottom-shadow($width: 8){
    &:before                      {border-top: $width*1px solid rgba(0,0,0,0.2);
                                   border-right: $width*1px solid transparent;
                                   border-left: $width*1px solid transparent;
                                   left: 50%;
                                   margin-left: #{$width*-1}px;
                                   top: 107%;
                                   content: '';
                                   position: absolute;
    }
}

@mixin neumorphism-shadow() {
    box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 8px,
        rgba(255, 255, 255, 1) -2px -2px 8px 2px;
}

// typography ---------------------------------------------

h2                                      {font-family: $title-fonts;
                                         font-weight: normal;
                                         color: $heading-color;
}
/* ... */

